--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.24.0",
     "date-fns": "^2.27.0",
     "firebase": "^9.5.0",
-    "jquery": "^3.6.0",
-    "json-server": "^0.17.0",
+    "npm-check-updates": "^12.3.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
